[package]
name = "rust-sokoban"
version = "0.1.0"
authors = ["Olivia <olivia_github@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "mesh" ]
mesh = [ "lyon" ]
# log-impl = ["miniquad/log-impl"]
# jpeg = [ "image/jpeg" ]

[dependencies]
good-web-game = { git = "https://github.com/eduardonunesp/good-web-game" }
specs = { version = "0.15.0", features = ["specs-derive"] }
itertools = "0.9.0"
nalgebra = { version = "0.19", features = ["mint"] }
cgmath = {version= "0.17", features=["mint"]}
mint = "0.5"
lyon = { version = "0.11", optional = true }